# elong-sdk

./: Cargo.toml  LICENSE  README.md  api.md  request.json  request3.json  result.json  result3.json
src/: lib.rs  types.rs
src/elong/: client.rs  endpoints.rs  error.rs  mod.rs  service.rs
src/network/: http_client.rs
src/request/: api_request.rs  data_booking.rs  data_inventory.rs  data_rate.rs  data_rp.rs  data_validate.rs  dictionary.rs  exchangerate.rs  hotel_detail_request.rs  hotel_rate_min_request.rs  incr_id.rs  incr_inv.rs  incr_order.rs  incr_rate.rs  incr_state.rs  mod.rs  order_addinvoice.rs  order_cancel.rs  order_create.rs  order_detail.rs  order_feedback.rs  order_list.rs  order_pay.rs  order_pay_confirm.rs  order_promote.rs  order_related.rs  static_brand.rs  static_city.rs  static_grade.rs  static_group.rs  static_info.rs  static_list.rs
src/response/: api_response.rs  data_booking.rs  data_inventory.rs  data_rate.rs  data_rp.rs  data_validate.rs  dictionary.rs  exchangerate.rs  hotel_detail_response.rs  hotel_rate_min_response.rs  incr_id.rs  incr_inv.rs  incr_order.rs  incr_rate.rs  incr_state.rs  mod.rs  order_addinvoice.rs  order_cancel.rs  order_create.rs  order_detail.rs  order_feedback.rs  order_list.rs  order_pay.rs  order_pay_confirm.rs  order_promote.rs  order_related.rs  static_brand.rs  static_city.rs  static_grade.rs  static_group.rs  static_info.rs  static_list.rs
tests/: test_client.rs  test_service.rs
