[package]
name = "elong-offline-sdk"
version = "0.1.0"
edition = "2021"
authors = ["唐加彬 me@tangjiabin.cn"]
description = "用于与艺龙离线数据异步交互的 SDK"
license = "MIT"
repository = "https://github.com/JiabinTang/elong-offline-sdk"
homepage = "https://github.com/JiabinTang/elong-offline-sdk"
readme = "README.md"

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.40"
flate2 = "1.1.1"
log = "0.4.27"
md5 = "0.7.0"
reqwest = "0.12.15"
serde_json = "1"
urlencoding = "2.1.3"
tokio = { version = "1", features = ["rt", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
